style.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* KATEX */

/* Fix Tailwind making fraction line very light */
.katex .frac-line {
    @apply border-gray-700;
}

/* DRACULA THEME */

.token.comment {
    color: rgba(98, 114, 164, 1);
}

.token.prolog {
    color: rgba(207, 207, 194, 1);
}

.token.tag {
    color: rgba(220, 104, 170, 1);
}

.token.entity {
    color: rgba(139, 233, 253, 1);
}

.token.atrule {
    color: rgba(98, 239, 117, 1);
}

.token.url {
    color: rgba(102, 217, 239, 1);
}

.token.selector {
    color: rgba(207, 207, 194, 1);
}

.token.string {
    color: rgba(241, 250, 140, 1);
}

.token.property {
    color: rgba(255, 184, 108, 1);
}

.token.important {
    color: rgba(255, 121, 198, 1);
    font-weight: bold;
}

.token.punctuation {
    color: white;
}

.token.number {
    color: rgba(189, 147, 249, 1);
}

.token.function {
    color: rgba(80, 250, 123, 1);
}

.token.class-name {
    color: rgba(255, 184, 108, 1);
}

.token.keyword {
    color: rgba(255, 121, 198, 1);
}

.token.boolean {
    color: rgba(255, 184, 108, 1);
}

.token.operator {
    color: rgba(139, 233, 253, 1);
}

.token.char {
    color: rgba(255, 135, 157, 1);
}

.token.regex {
    color: rgba(80, 250, 123, 1);
}

.token.variable {
    color: rgba(80, 250, 123, 1);
}

.token.constant {
    color: rgba(255, 184, 108, 1);
}

.token.symbol {
    color: rgba(255, 184, 108, 1);
}

.token.builtin {
    color: rgba(255, 121, 198, 1);
}

.token.attr-value {
    color: #7ec699;
}

.token.deleted {
    color: #e2777a;
}

.token.namespace {
    color: #e2777a;
}

.token.bold {
    font-weight: bold;
}

.token.italic {
    font-style: italic;
}

.token {
    color: #ff79c6;
}

.language-cpp .token.string {
    color: #8be9fd;
}

.language-c .token.string {
    color: #8be9fd;
}

.language-css .token.selector {
    color: rgba(80, 250, 123, 1);
}

.language-css .token.property {
    color: rgba(255, 184, 108, 1);
}

.language-java span.token.class-name {
    color: #8be9fd;
}

.language-java .token.class-name {
    color: #8be9fd;
}

.language-markup .token.attr-value {
    color: rgba(102, 217, 239, 1);
}

.language-markup .token.tag {
    color: rgba(80, 250, 123, 1);
}

.language-objectivec .token.property {
    color: #66d9ef;
}

.language-objectivec .token.string {
    color: #50fa7b;
}

.language-php .token.boolean {
    color: #8be9fd;
}

.language-php .token.function {
    color: #ff79c6;
}

.language-php .token.keyword {
    color: #66d9ef;
}

.language-ruby .token.symbol {
    color: #8be9fd;
}

.language-ruby .token.class-name {
    color: #cfcfc2;
}

